--- a/package.json
+++ b/package.json
@@ -4,10 +4,18 @@
   "private": true,
   "dependencies": {
     "blockstack": "^19.2.5",
+    "grommet": "^2.7.5",
+    "grommet-icons": "^4.3.0",
+    "history": "^4.9.0",
+    "polished": "^3.4.1",
+    "ramda": "^0.26.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.0",
-    "styled-components": "^4.3.2"
+    "sanctuary": "^2.0.0",
+    "styled-components": "^4.3.2",
+    "styled-reset": "^3.0.1",
+    "universal-router": "^8.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
